# Detecci-n-Digital-TCA

./: .gitignore  README.md  predicciones_finales.xlsx  presentacion-fase2b.html  pyproject.toml
data/: data_train.csv
data/lexicons/: NRC-Emotion-Lexicon-v0.92-Spanish.txt
docs/: articles.tex
scripts/: download_nrc.py
src/: classifier.py  data_loader.py  evaluator.py  feature_extractor.py  feature_union.py  main.py  predictor.py  preprocessor.py
tests/: conftest.py  test_classifier.py  test_data_loader.py  test_evaluator.py  test_feature_extractor.py  test_feature_union.py  test_predictor.py  test_preprocessor.py
