[project]
name = "detecci-n-digital-tca"
version = "0.1.0"
description = "NLP tool for eating disorder detection from Spanish social media posts"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "spacy>=3.7.0",
    "numpy>=1.26.0",
    "pytest>=8.0.0",
    "xgboost>=2.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "joblib>=1.3.0",
    "ftfy>=6.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
